Fix Visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -1140,21 +1140,21 @@
 							}
 						// Highlight Color
 							.RichTextViewer {
-								.highlight-color--red {background-color: var(--highlight-color--red-light);}
-								.highlight-color--orange {background-color: var(--highlight-color--orange-light);}
-								.highlight-color--yellow {background-color: var(--highlight-color--yellow-light);}
-								.highlight-color--green {background-color: var(--highlight-color--green-light);}
-								.highlight-color--blue {background-color: var(--highlight-color--blue-light);}
-								.highlight-color--purple {background-color: var(--highlight-color--purple-light);}
+								.highlight-color--red:not(.bold.highlight-color--red) {background-color: var(--highlight-color--red-light);}
+								.highlight-color--orange:not(.bold.highlight-color--orange) {background-color: var(--highlight-color--orange-light);}
+								.highlight-color--yellow:not(.bold.highlight-color--yellow) {background-color: var(--highlight-color--yellow-light);}
+								.highlight-color--green:not(.bold.highlight-color--green) {background-color: var(--highlight-color--green-light);}
+								.highlight-color--blue:not(.bold.highlight-color--blue) {background-color: var(--highlight-color--blue-light);}
+								.highlight-color--purple:not(.bold.highlight-color--purple) {background-color: var(--highlight-color--purple-light);}
 							}
 							[data-slate-node="element"] {
 								[data-slate-node~="text"] {
-									.highlight-color--red {background-color: var(--highlight-color--red-light);}
-									.highlight-color--orange {background-color: var(--highlight-color--orange-light);}
-									.highlight-color--yellow {background-color: var(--highlight-color--yellow-light);}
-									.highlight-color--green {background-color: var(--highlight-color--green-light);}
-									.highlight-color--blue {background-color: var(--highlight-color--blue-light);}
-									.highlight-color--purple {background-color: var(--highlight-color--purple-light);}
+									.highlight-color--red:not(.bold.highlight-color--red) {background-color: var(--highlight-color--red-light);}
+									.highlight-color--orange:not(.bold.highlight-color--orange) {background-color: var(--highlight-color--orange-light);}
+									.highlight-color--yellow:not(.bold.highlight-color--yellow) {background-color: var(--highlight-color--yellow-light);}
+									.highlight-color--green:not(.bold.highlight-color--green) {background-color: var(--highlight-color--green-light);}
+									.highlight-color--blue:not(.bold.highlight-color--blue) {background-color: var(--highlight-color--blue-light);}
+									.highlight-color--purple:not(.bold.highlight-color--purple) {background-color: var(--highlight-color--purple-light);}
 								}
 							}
 					}
@@ -1440,21 +1440,21 @@
 								}
 							// Highlight Color
 								.RichTextViewer {
-									.highlight-color--red {background-color: var(--highlight-color--red-dark);}
-									.highlight-color--orange {background-color: var(--highlight-color--orange-dark);}
-									.highlight-color--yellow {background-color: var(--highlight-color--yellow-dark);}
-									.highlight-color--green {background-color: var(--highlight-color--green-dark);}
-									.highlight-color--blue {background-color: var(--highlight-color--blue-dark);}
-									.highlight-color--purple {background-color: var(--highlight-color--purple-dark);}
+									.highlight-color--red:not(.bold.highlight-color--red) {background-color: var(--highlight-color--red-dark);}
+									.highlight-color--orange:not(.bold.highlight-color--orange) {background-color: var(--highlight-color--orange-dark);}
+									.highlight-color--yellow:not(.bold.highlight-color--yellow) {background-color: var(--highlight-color--yellow-dark);}
+									.highlight-color--green:not(.bold.highlight-color--green) {background-color: var(--highlight-color--green-dark);}
+									.highlight-color--blue:not(.bold.highlight-color--blue) {background-color: var(--highlight-color--blue-dark);}
+									.highlight-color--purple:not(.bold.highlight-color--purple) {background-color: var(--highlight-color--purple-dark);}
 								}
 								[data-slate-node="element"] {
 									[data-slate-node~="text"] {
-										.highlight-color--red {background-color: var(--highlight-color--red-dark);}
-										.highlight-color--orange {background-color: var(--highlight-color--orange-dark);}
-										.highlight-color--yellow {background-color: var(--highlight-color--yellow-dark);}
-										.highlight-color--green {background-color: var(--highlight-color--green-dark);}
-										.highlight-color--blue {background-color: var(--highlight-color--blue-dark);}
-										.highlight-color--purple {background-color: var(--highlight-color--purple-dark);}
+										.highlight-color--red:not(.bold.highlight-color--red) {background-color: var(--highlight-color--red-dark);}
+										.highlight-color--orange:not(.bold.highlight-color--orange) {background-color: var(--highlight-color--orange-dark);}
+										.highlight-color--yellow:not(.bold.highlight-color--yellow) {background-color: var(--highlight-color--yellow-dark);}
+										.highlight-color--green:not(.bold.highlight-color--green) {background-color: var(--highlight-color--green-dark);}
+										.highlight-color--blue:not(.bold.highlight-color--blue) {background-color: var(--highlight-color--blue-dark);}
+										.highlight-color--purple:not(.bold.highlight-color--purple) {background-color: var(--highlight-color--purple-dark);}
 									}
 								}
 						}
